feat: add the calc for get the average time and format it correctly && add new doc for the route created into swagger
